Updated CSS to fit sizing issue for font on mobile

--- a/style.css
+++ b/style.css
@@ -154,13 +154,13 @@ hr.light-100{
   }
 @media (max-width: 768px) {
   .carousel-caption{
-    top: 45%;
+    top: 40%;
   }
   .carousel-caption h1{
-    font-size: 350%;
+    font-size: 300%;
   }
   .carousel-caption h3{
-    font-size: 140%;
+    font-size: 120%;
     font-weight: 400;
     padding-bottom: .2rem;
   }
@@ -178,13 +178,13 @@ hr.light-100{
 }
 @media (max-width: 576px) {
   .carousel-caption{
-    top: 40%;
+    top: 30%;
   }
   .carousel-caption h1{
-    font-size: 250%;
+    font-size: 180%;
   }
   .carousel-caption h3{
-    font-size: 110%;
+    font-size: 80%;
   }
   .carousel-caption .btn{
     font-size: 90%;
